<resources>
    <string name="app_name">ruedarent</string>
    <string name="logo_welcome">Logo</string>
    <string name="log_in_welcome">Log In</string>
    <string name="register_welcome">Register</string>
    <string name="logo_loginactivity">LOGO</string>
    <string name="log_in_loginactivity">Log In</string>
    <string name="email_loginactivity">Email</string>
    <string name="password_loginactivity">Password</string>
    <string name="login">Log In</string>
    <string name="logoregister_registeractivity">LogoRegister</string>
    <string name="tvregister_registeractivity">Register</string>
    <string name="btregister_registeractivity">Register</string>
    <string name="name_registeractivity">Name</string>
    <string name="last_name_registeractivity">Last Name</string>
    <string name="email_registeractivity">Email</string>
    <string name="password_registeractivity">Password</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="logo_description">Logo Description</string>
    <string name="add_vehicle">ADD VEHICLE</string>
    <string name="back_arrow_description">Regresar</string>
    <string name="profile_circle_description">Imagen de Perfil</string>
    <string name="propietario_icon">Icono de Propietario</string>
    <string name="rentador_icon">Icono de Rentador</string>
    <string name="vehiculo_image_description">Imagen del Vehículo</string>
    <string name="editar_vehiculo_description">Editar Vehículo</string>
    <string name="eliminar_vehiculo_description">Eliminar Vehículo</string>
    <string name="pedidos_description">Pedidos</string>
    <string name="vehiculos_description">Vehículos</string>
    <string name="perfil_description">Perfil</string>
    <string name="category_image_description">Imagen de la categoría</string>
    <string name="editar_categoria_description">Editar Categoría</string>
    <string name="eliminar_categoria_description">Eliminar Categoría</string>
    <string-array name="vehicle_types">
        <item>Car</item>
        <item>Bike</item>
        <item>Truck</item>
        <item>Motorcycle</item>
    </string-array>
</resources>