<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogoLogin"
        android:layout_width="250dp"
        android:layout_height="241dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="81dp"
        android:contentDescription="@string/logo_loginactivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="65dp"
        android:text="@string/log_in_loginactivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLogin" />

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="49dp"
        android:autofillHints="EMAIL"
        android:ems="10"
        android:hint="@string/email_loginactivity"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="49dp"
        android:autofillHints="PASSWORD"
        android:ems="10"
        android:hint="@string/password_loginactivity"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLogin" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="153dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>