<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogoWelcome"
        android:layout_width="289dp"
        android:layout_height="274dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="62dp"
        android:contentDescription="@string/logo_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btLoginWelcome"
        android:layout_width="149dp"
        android:layout_height="65dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/log_in_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoWelcome" />

    <Button
        android:id="@+id/btRegisterWelcome"
        android:layout_width="149dp"
        android:layout_height="65dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        android:text="@string/register_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btLoginWelcome"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoWelcome" />
</androidx.constraintlayout.widget.ConstraintLayout>