<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Imagen del Vehículo -->
        <ImageView
            android:id="@+id/imageVehiculo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/login_logo_image"
            android:contentDescription="@string/vehiculo_image_description"
            android:scaleType="centerCrop" />

        <!-- Descripción del Vehículo -->
        <TextView
            android:id="@+id/textDescripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/imageVehiculo"
            android:ellipsize="end"
            android:fontFamily="@font/inter"
            android:maxLines="2"
            android:text="Descripción breve del vehículo"
            android:textColor="#000000"
            android:textSize="15sp" />

        <!-- Botón Editar -->
        <ImageView
            android:id="@+id/buttonEditar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_editar"
            android:contentDescription="@string/editar_vehiculo_description"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true" />

        <!-- Botón Eliminar -->
        <ImageView
            android:id="@+id/buttonEliminar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_eliminar"
            android:contentDescription="@string/eliminar_vehiculo_description"
            android:layout_below="@id/buttonEditar"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
